<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_info"
        android:orderInCategory="100"
        android:title="@string/action_info"
        app:showAsAction="never"
        android:icon="@android:drawable/ic_dialog_info" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_notification"
        android:orderInCategory="100"
        android:title="@string/action_notification"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_stat_notification"
         />
    <item android:title="@string/action_lang"
        app:showAsAction="ifRoom"
        android:orderInCategory="100"
        android:id="@+id/action_lang"/>
</menu>
